# repcon

./: .codeclimate.yml  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  sonar-private.properties  sonar-project.properties
.github/workflows/: ci.yml
repcon/: __init__.py  cli.py
tests/: helper.py  test_cli.py  test_repcon.py
tests/fixtures/: junit_report.xml  junit_report2.xml  sonar_generic.xml  sonar_generic2.xml  sonar_generic2_i2.xml
