[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "repcon"
version = "0.0.2"
description = "Report Converter"
authors = ["Tsunenobu Kai <kai2nenobu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
mypy = "^0.910"
black = "^21.10b0"
isort = {extras = ["colors", "pyproject"], version = "^5.10.0"}

[tool.poetry.scripts]
repcon = 'repcon.cli:main'

[tool.mypy]
python_version = 3.6
exclude = "(.venv|.cache|.mypy_cache|.pytest_cache)/"

[tool.black]
line-length = 120
extend-exclude = '''
(
    .venv
    |.cache
    |.mypy_cache
    |.pytest_cache
)
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".venv", ".cache", ".mypy_cache", ".pytest_cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--junitxml=junit.xml --cov --cov-report=term --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["repcon"]

[tool.coverage.report]
fail_under = 90
